--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,6 @@
         <hibernate.version>5.4.2.Final</hibernate.version>
         <hibernate.annotation.version>3.5.6-Final</hibernate.annotation.version>
         <postgres.version>42.2.5</postgres.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -30,6 +28,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-annotations</artifactId>
             <version>${hibernate.annotation.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgres.version}</version>
         </dependency>
         <!-- mysql -->
         <dependency>
