--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,13 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.26</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
