--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,12 @@
             <artifactId>reflections</artifactId>
             <version>0.9.11</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.webjars.bower/angular -->
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>angular</artifactId>
+            <version>1.7.8</version>
+        </dependency>
+
     </dependencies>
 </project>
