--- a/webapp/bower.json
+++ b/webapp/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "angular": "^1.7.8",
-    "angular-route": "^1.7.8"
+    "angular-route": "^1.7.8",
+    "angular-cookies": "^1.7.8"
   }
 }
